--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </properties>
 
     <groupId>org.apache.asterix</groupId>
-    <artifactId>asterix-udf-template</artifactId>
+    <artifactId>asterix-snlp-udf</artifactId>
     <version>0.1-SNAPSHOT</version>
 
     <dependencies>
@@ -21,9 +21,15 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.davidcarboni</groupId>
-            <artifactId>cryptolite</artifactId>
-            <version>1.3.2</version>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.7.0</version>
+            <classifier>models</classifier>
         </dependency>
     </dependencies>
 
